--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Austin Aware</h4>
-                        <p class="text-muted">Check </p>
+                        <p class="text-muted">Austin Traffic Maps </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 portfolio-item">
@@ -187,7 +187,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Giphy API</h4>
-                        <p class="text-muted">Website Design</p>
+                        <p class="text-muted">API</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 portfolio-item">
@@ -197,11 +197,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/mongo.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Mongo News</h4>
-                        <p class="text-muted">Website Design</p>
+                        <p class="text-muted">Web Scraper</p>
                     </div>
                 </div>
 
@@ -216,7 +216,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Employee Form</h4>
-                        <p class="text-muted">Website Design</p>
+                        <p class="text-muted">Database Form</p>
                     </div>
                 </div>
 
@@ -328,9 +328,9 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Austin Aware</h2>
-                                <p class="item-intro text-muted">Check for traffic fatalities and lost pets</p>
+                                <p class="item-intro text-muted">Check for traffic fatalities by year as well as lost & dangerous pets</p>
                                 <img class="img-responsive img-centered" src="img/a.jpg" alt="">
-                                <p>This app was created to view the traffic fatalities in the city of Austin. Other features include finding logged lost anddangerous pets.</p>
+                                <p>This app was created to view the traffic fatalities in the city of Austin. Other features include finding logged lost and dangerous pets.</p>
 
                                 <ul class="list-inline">
                                     <li>Date: November 2016</li>
@@ -364,7 +364,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <h2>SOA Trivia Game</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted"></p>
                                 <img class="img-responsive img-centered" src="img/soa.jpg" alt="">
                                 <p><a href="http://designmodo.com/startup/?u=787">SOA Trivia!</a> This app exists as a reference to demonstrate the usage of delayed functions. You'll have 45 seconds to complete the questions, upon timeout or upon submit button event, you'll be notified of the correct and incorrect guesses. The game then resets itself.</p>
                                 <p>Play the Game <a href="https://soatrivia.herokuapp.com">Here!</a>.</p>
@@ -393,7 +393,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Giphy API</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted"></p>
                                 <img class="img-responsive img-centered" src="img/giphy.jpg" alt="">
                                 <p>Styling is minimalistic, JavaScript is one file. Functionality is based on jQuery's .ajax({}) method requesting data from gihpy.com for any items matching a user-inputed query string value. This app serves as a working example of a basic introduction to AJAX usage and syntax.</p>
                                 <p>You can check out my project demo here <a href="https://naturegiphy.herokuapp.com/">Giphy API</a>.</p>
@@ -423,7 +423,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Mongo News</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="img/mongo2.png" alt="">
                                 <p><br><b>Overview</b> </br> This application is formatted to take a Database identical to the original instructions. It takes a database named Bamazon, a table named Products, and the columns of ItemID, ProductName, DepartmentName, Price, and StockQuantity. +This application is the Basic + the Manager application. Formatted exactly like the original file names of BamazonCustomer.js and BamazonManager.js <br> <b>Functionality</b> </br>
 
                                 The customer app works exactly as described in the original instructions. On load, it'll load the table and display all items for sale and the coresponding data for each item. If the table looks odd, try expanding the terminal window a little bit. You'll be prompted for item number and desired quantity. 
@@ -441,7 +441,7 @@
                                 </p>
 
                                 </p>
-                                <p>You can view the Demo <a href="https://powerful-hollows-61723.herokuapp.com/">Here</a>.</p>
+                                <p>You can view the Demo <a href="https://mongodb-news.herokuapp.com/">Here</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -467,9 +467,9 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Employee Form</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted"></p>
                                 <img class="img-responsive img-centered" src="img/employee.jpg" alt="">
-                                <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
+                                <p>Basic employee form that demonstrates usage of MySQL, NODE.JS, and EXPRESS.JS</p>
                                 <p>You can view the full app here <a href="https://employeeeapp.herokuapp.com/">Employee Form</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
