--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Deepaul Singh Portfolio</title>
+    <title>Dpaul Singh Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -286,7 +286,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Deepaul Bharj 2017</span>
+                    <span class="copyright">Copyright &copy; Dpaul Singh 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
