--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li> 
-                        <a href="https://drive.google.com/open?id=0B26A8k1EoZqbblVmME04SEdNMTg" target="_blank">Resume</a>
+                        <a href="https://drive.google.com/file/d/0B26A8k1EoZqbTWJZRTNKTGNLUkE/view?usp=sharing" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
