--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div id="intro-heading1">Deepaul</div>
+                <div id="intro-heading1">Dpaul</div>
                 <div id="intro-heading2">Singh </div>
                 <div id="intro-heading3">Web Design and Development</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
