--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dpaul Singh Portfolios</title>
+    <title>Dpaul Singh Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -80,7 +80,7 @@
             <div class="intro-text">
                 <div id="intro-heading1">Dpaul</div>
                 <div id="intro-heading2">Singh </div>
-                <div id="intro-heading3">Web Design and Development</div>
+                <div id="intro-heading3">Crypto & Blockchain Expert</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
