--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="intro-text">
                 <div id="intro-heading1">Dpaul</div>
                 <div id="intro-heading2">Singh </div>
-                <div id="intro-heading3">Crypto & Blockchain Expert</div>
+                <div id="intro-heading3">Crypto & Blockchain Specialist</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 id="section-subheading">My interests are web development and digital security, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. On the other hand, I'm secretly wary of technology and the direction it's been heading in recent years. In general, I hope to contribute to a world where we value experiences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
+                    <h3 id="section-subheading">My interests lie in blockchain technology, cryptocurrency and digital security, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. On the other hand, I'm secretly wary of technology and the direction it's been heading in recent years. Nevertheless, I am optomistic that blockchain technology can fix a lot of these shortcomings. In general, I hope to contribute to a world where we value experiences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
                 </div>
             </div>
             <div class="row">
@@ -130,8 +130,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Web servers and the sites they host are the most vulnerable security risk for many companies.  Today’s complex programs all have some “weaknesses.”  Each web server has dozens, or in some cases hundreds of settings, the website code always has issues and the applications running on the IT infrastructure can also have issues.</p>
+                    <h4 class="service-heading">Web & Device Security</h4>
+                    <p class="text-muted">Web servers and the sites they host are the most vulnerable security risk for not only companies, but individuals. In today's world there is a host of security flaws. If you wish to have any of your devices secured (setting up your VPN, tweaking device settings etc.), to showing you how to set up a hardware wallet, and advice on how to stay anonymous while browsing the internet, I am your guy.</p>
                 </div>
             </div>
         </div>
