--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -115,15 +115,15 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">With platform features like unlimited products and categories, to a secure one-page checkout, we make online shopping easy for customers and easy to manage for website owners. From selling a product or subscription, to taking payments for a service, our team can develop the custom eCommerce website solution that's perfect for your business.</p>
+                    <p class="text-muted">With platform features like unlimited products and categories, to a secure one-page checkout, I make online shopping easy for customers and easy to manage for website owners. From selling a product or subscription, to taking payments for a service, I can develop the custom eCommerce website solution that's perfect for your business.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Wordpress</h4>
-                    <p class="text-muted">On this site you can download and install a software script called WordPress. To do this you need a web host who meets the minimum requirements and a little time. WordPress is completely customizable and can be used for almost anything. There is also a service called WordPress.com which lets you get started with a new and free WordPress-based blog in seconds, but varies in several ways and is less flexible than the WordPress you download and install yourself.</p>
+                    <h4 class="service-heading">Blockchain Education</h4>
+                    <p class="text-muted">The blockchain is a distributed database that provides an unalterable, (semi-)public record of digital transactions. Each block aggregates a timestamped batch of transactions to be included in the ledger – or rather, in the blockchain. Each block is identified by a cryptographic signature. These blocks are all back-linked; that is, they refer to the signature of the previous block in the chain, and that chain can be traced all the way back to the very first block created. As such, the blockchain contains an un-editable record of all the transactions made.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -131,7 +131,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web & Device Security</h4>
-                    <p class="text-muted">Web servers and the sites they host are the most vulnerable security risk for not only companies, but individuals. In today's world there is a host of security flaws. If you wish to have any of your devices secured (setting up your VPN, tweaking device settings etc.), to showing you how to set up a hardware wallet, and advice on how to stay anonymous while browsing the internet, I am your guy.</p>
+                    <p class="text-muted">Web servers and the sites they host are the most vulnerable security risk for not only companies, but individuals. In today's world there is a host of security flaws. If you wish to have any of your devices secured (setting up your VPN, tweaking device settings, best practices), to showing you how to set up a crypto hardware wallet (using it for 2FA) and advice on how to stay anonymous while browsing the internet, I am your guy.</p>
                 </div>
             </div>
         </div>
@@ -143,8 +143,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Check out my work</h3>
+                    <h2 class="section-heading">Past Projects</h2>
+                    <h3 class="section-subheading text-muted">Check out my past projects</h3>
                 </div>
             </div>
             <div class="row">
@@ -243,7 +243,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Lets Work Together!</h3>
+                    <h3 class="section-subheading text-muted">Have a project or idea get in touch with me and lets work together!</h3>
                 </div>
             </div>
             <div class="row">
