--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Have a project or idea get in touch with me and lets work together!</h3>
+                    <h3 class="section-subheading text-muted">Have a project or idea? Get in touch and lets work together!</h3>
                 </div>
             </div>
             <div class="row">
