--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dpaul Singh Portfolio</title>
+    <title>Deepaul Singh Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li> 
-                        <a href="https://drive.google.com/file/d/0B0AjLkR8xGVlUUVibUMzbHg4aDQ/view?usp=sharing" target="_blank">Resume</a>
+                        <a href="https://drive.google.com/file/d/0B0AjLkR8xGVlalJKcFFQYlp2VzA/view?usp=sharing" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -78,9 +78,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div id="intro-heading1">Dpaul</div>
+                <div id="intro-heading1">Deepaul</div>
                 <div id="intro-heading2">Singh </div>
-                <div id="intro-heading3">Crypto & Blockchain Specialist</div>
+                <div id="intro-heading3">Crypto & Blockchain Analyst</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 id="section-subheading">My interests lie in blockchain technology, cryptocurrency and digital security, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. On the other hand, I'm secretly wary of technology and the direction it's been heading in recent years. Nevertheless, I am optomistic that blockchain technology can fix a lot of these shortcomings. In general, I hope to contribute to a world where we value experiences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
+                    <h3 id="section-subheading">My interests lie in blockchain technology, cryptocurrency and digital security, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. On the other hand, I'm secretly wary of technology and the direction it's been heading in recent years. Nevertheless, I am optimistic that blockchain technology can fix a lot of these shortcomings. In general, I hope to contribute to a world where we value experiences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
                 </div>
             </div>
             <div class="row">
