--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="intro-text">
                 <div id="intro-heading1">Deepaul</div>
                 <div id="intro-heading2">Singh </div>
-                <div id="intro-heading3">Crypto & Blockchain Analyst</div>
+                <div id="intro-heading3">Network Analyst</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 id="section-subheading">My interests lie in blockchain technology, cryptocurrency and digital security, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. On the other hand, I'm secretly wary of technology and the direction it's been heading in recent years. Nevertheless, I am optimistic that blockchain technology can fix a lot of these shortcomings. In general, I hope to contribute to a world where we value experiences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
+                    <h3 id="section-subheading">My interests lie in blockchain technology, network security, cryptocurrency and digital security, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. On the other hand, I'm secretly wary of technology and the direction it's been heading in recent years. Nevertheless, I am optimistic that blockchain technology can fix a lot of these shortcomings. In general, I hope to contribute to a world where we value experiences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
                 </div>
             </div>
             <div class="row">
@@ -130,7 +130,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web & Device Security</h4>
+                    <h4 class="service-heading">Network, Web & Device Security</h4>
                     <p class="text-muted">Web servers and the sites they host are the most vulnerable security risk for not only companies, but individuals. In today's world there is a host of security flaws. If you wish to have any of your devices secured (setting up your VPN, tweaking device settings, best practices), to showing you how to set up a crypto hardware wallet (using it for 2FA) and advice on how to stay anonymous while browsing the internet, I am your guy.</p>
                 </div>
             </div>
